--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=alura.challenge
+spring.datasource.url=jdbc:mysql://localhost:3306/jornada_milhas
+spring.datasource.username=root
+spring.datasource.password=root
