--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: jornada_milhas
+      TZ: America/Sao_Paulo
     ports:
       - 3306:3306
     volumes:
